--- a/src/main/resources/templates/movie/form.html
+++ b/src/main/resources/templates/movie/form.html
@@ -27,7 +27,7 @@
 
         <div>
             <label for="gender">Gender:</label>
-            <input id="gender" name="gender"th:value="${movie?.gender}">
+            <input id="gender" name="gender"th:value="${movie?.genre}">
         </div>
 
 
